@@ -15,6 +15,7 @@
 - Fix: [#250] Silently ignoring waiver on non-working day or non-working day range
 - Fix: [#252] Prevent multiple preferences and workday waiver windows to be opened
 - Fix: [#255] Avoiding issue when closing preferences window without changing anything
+- Fix: [#258] Fixing crash when changing network while opening TTL
 - Enhancement: [#228] Improved performance of TTL - Now moving through the calendar is much faster
 - Enhancement: [#152] Adding a "Copy" option in the "About message", making it easier to copy information when opening an issue
 - Enhancement: [#241] Changing input format for notification interval and hours per day on preferences
